todo-app with checkbox

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -5,7 +5,7 @@
         <h1>TODOS</h1>
         <input type='text' id='search-text' placeholder='Filter todos'>
         <label>
-            <input id="checkbox" type="checkbox" value="false">Hide completed</input>
+            <input type="checkbox" id="hide-completed">Hide completed</input>
         </label>
         <div id='todos'></div>
         <form id="new-todo">
