--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -12,6 +12,8 @@
             <input type="text" placeholder="Something to do" name="text">
             <button>Add Todo</button>
         </form>
+        <script src="uuidv4.js"></script>
+        <script src="todo-functions.js"></script>
         <script type="text/javascript" src="todo-app.js"></script>
     </body>
 </html>
